# Cross-Platform-Chat-App

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md
client/: Client.cpp  Client.h  Network.cpp  Network.h  UI.cpp  UI.h  main.cpp
server/: ClientSession.cpp  ClientSession.h  MessageRouter.cpp  MessageRouter.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h  main.cpp
shared/: Message.h  Protocol.h  Serializer.h
